# advance-substrate

substrate-node-template/docs/substrate-101/: README.md
substrate-node-template/docs/substrate-kitty/: README.md  basic-setup.md  overview.md
substrate-node-template/node/src/: chain_spec.rs
substrate-node-template/pallets/kitties/: Cargo.toml  README.md
substrate-node-template/pallets/kitties/src/: kitty.rs  lib.rs  mock.rs  tests.rs
substrate-node-template/pallets/poe/: Cargo.toml
substrate-node-template/pallets/poe/src/: lib.rs  mock.rs  tests.rs
substrate-node-template/runtime/: Cargo.toml
substrate-node-template/runtime/src/: lib.rs
