[package]
name = "pallet-kitties"
version = "0.1.0"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true }
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-io = {version = "6.0.0", default-features = false } 
sp-runtime  = {version = "6.0.0", default-features = false } 
sp-std = {version = "4.0.0", default-features = false}
serde = {versrion = "1", default-features = false }
log = { version = "0.4.17", default-features = false }

[dev-dependencies]
sp-core = "6.0.0"
sp-io = "6.0.0"
sp-runtime = "6.0.0"
pallet-randomness-collective-flip = { version = "4.0.0-dev"}
pallet-balances = { version = "4.0.0-dev" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-io/std",
	"serde/std",
	"log/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
